# vehicle_control

ioniq_control/: CMakeLists.txt  README.md  gnss_receive_data.txt
ioniq_control/GNSS/: gnss_receive_data.txt  gnss_receive_data20181123_1.txt  gnss_receive_data_1205.txt  gnss_receive_data_1205_2.txt  gnss_receive_data_1205_20kph.txt  gnss_receive_data_1205_3.txt  gnss_receive_data_1205_55.txt  gnss_receive_data_190109.txt  gnss_receive_data_20181213_school.txt  gnss_receive_data_20181214.txt  gnss_receive_data_20190119.txt  gnss_receive_data_CtoH.txt  gnss_receive_data_HtoC.txt  gnss_receive_data_NEW_VIEWER.txt  gnss_receive_data_NEW_VIEWER_2.txt  gnss_receive_data_PP.txt  gnss_receive_data_coord_modified.txt  gnss_receive_data_error.txt  gnss_receive_data_error_2.txt  gnss_receive_data_k-city_fixed.txt  gnss_receive_data_k-city_straight.txt  gnss_receive_data_old_viewer.txt  gnss_receive_data_rtk_ýóîÝÜîýáä.txt  gnss_receive_data_rtk_ýóîÝÜîýáä_2.txt  gnss_receive_data_school.txt  gnss_receive_data_ÛÁÉý░¿Ùí£ýºäý×àýáäýáòýºÇýäáýóîÝæ£.txt  gnss_receive_data_ýºüýºä.txt  gnss_receive_data_ýºüýºä_20kph.txt  gnss_receive_data_ýÜ░ÝÜîýáä_10kph.txt  gnss_receive_data_ýï£ÙéÿÙª¼ýÿñ1.txt  gnss_receive_data_ýï£ÙéÿÙª¼ýÿñ2.txt  gnss_receive_data_ýóîÝÜîýáä_10kph.txt  gnss_receive_data_ýóîÝÜîýáä_10kph_modified.txt.numbers  gnss_receive_data_ýóîÝÜîýáä_20kph_1.txt  gnss_receive_data_ýóîÝÜîýáä_20kph_2.txt
ioniq_control/YAW_ANGLE/: 000 30kph_MAvg7000_k_linear.txt  001 10kph_MAvg7000_k_linear_corner_2.txt  002 10kph_MAvg7000_k_linear_corner.txt  10kph_MAvg1500_k_2.txt  10kph_MAvg7000_k_linear_multi_corner_4.txt  10kph_MAvg8000_k_2.txt  10kph_MAvg8000_k_2_corner.txt  20kph_MAvg7000_k_linear.txt  20kph_MAvg8000_k_2.txt  30kph_MAvg8000_k_0.02.txt  30kph_MAvg8000_k_0.5.txt  30kph_MAvg8000_k_2.txt  GN2H.txt  GN2H_0.txt  yaw_angle_save.txt  yaw_angle_save_MAIN_ERROR.txt  yaw_angle_save_PP.txt
ioniq_control/include/: ROS_header.hpp  TSR_receive.h  c_test.h  can_linux_val.h  can_mac_val.h  coord_map.h  env_setting.h  parser_vercpp.hpp  pd_control.h
ioniq_control/src/: c_test.cpp  (+9 more)
(+52 files in other folders)
